# weighted-fd

./: .gitignore  README.md  memory-profile-analisys.sh  nvidea-setup.sh  pyproject.toml  requirements.txt  train.py
notebooks/: clients-number-analisys.ipynb  datasets.ipynb  flower-datasets.ipynb  proxy-fraction-analisys.ipynb  results-analisys.ipynb
src/wfd/: client.py  data.py  estimator.py  network.py  server.py  utils.py
